--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,176 @@
-torch
-torchvision
-accelerate
-wandb
-pathlib
-fastai
+accelerate==0.21.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.6.2
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
+autocorrect==2.6.1
+av==10.0.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+beautifulsoup4==4.12.0
+bleach==6.0.0
+blis==0.7.9
+catalogue==2.0.8
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+comm==0.1.3
+confection==0.0.4
+contourpy==1.0.7
+cycler==0.11.0
+cymem==2.0.7
+datasets==2.10.1
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.6
+docker-pycreds==0.4.0
+entrypoints==0.4
+executing==1.2.0
+fastai==2.7.11
+fastcore==1.5.28
+fastdownload==0.0.7
+fastjsonschema==2.16.3
+fastprogress==1.0.3
+filelock==3.10.2
+fonttools==4.39.2
+fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2023.3.0
+gdown==4.7.1
+gensim==4.3.1
+gitdb==4.0.10
+GitPython==3.1.31
+huggingface-hub==0.16.4
+idna==3.4
+importlib-metadata==6.1.0
+importlib-resources==5.12.0
+install==1.3.5
+ipykernel==6.22.0
+ipython==8.14.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+jupyter-events==0.6.3
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+jupyterthemes==0.20.0
+kiwisolver==1.4.4
+langcodes==3.3.0
+lesscpy==0.15.1
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mistune==2.0.5
+multidict==6.0.4
+multiprocess==0.70.14
+murmurhash==1.0.9
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.10
+nbformat==5.8.0
+nest-asyncio==1.5.6
+notebook==6.5.3
+notebook_shim==0.2.2
+numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+opencv-python==4.7.0.72
+packaging==23.0
+pandas==1.5.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathtools==0.1.2
+pathy==0.10.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==23.0.1
+platformdirs==3.5.1
+ply==3.11
+preshed==3.0.8
+progressbar==2.5
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==4.22.1
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pycparser==2.21
+pydantic==1.10.7
+Pygments==2.15.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2022.7.1
+PyYAML==6.0
+pyzmq==25.0.2
+regex==2023.6.3
+requests==2.28.2
+responses==0.18.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+safetensors==0.3.1
+scikit-learn==1.2.2
+scipy==1.10.1
+Send2Trash==1.8.0
+sentry-sdk==1.17.0
+setproctitle==1.3.2
+setuptools==65.6.3
+six==1.16.0
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4
+spacy==3.5.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.6
+stack-data==0.6.2
+terminado==0.17.1
+thinc==8.1.9
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tokenizers==0.13.3
+torch==1.13.1
+torchvision==0.14.1
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.31.0
+typer==0.7.0
+typing_extensions==4.6.3
+uri-template==1.2.0
+urllib3==1.26.15
+wandb==0.15.8
+wasabi==1.1.1
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+wheel==0.38.4
+widgetsnbextension==4.0.7
+xxhash==3.2.0
+yarl==1.8.2
+zipp==3.15.0
